--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+*,
+*:before,
+*:after{
+  transition: all 1s;
+box-sizing: border-box;
+}
