--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,9 +18,9 @@ body {
   margin: 13vh auto;
   /* box-shadow: 4px 18px 20px 3px #eee; */
   /* padding: 10px 20px; */
-  height: 70vh;
+  height: fit-content;
   /* width: 30%; */
-  max-width: 480px;
+  max-width: 400px;
   /* overflow: overlay; */
   /* width: 300px; */
   border: solid 3px darkslategrey;
@@ -35,14 +35,16 @@ body {
   margin-left: auto;
   /* margin-top: 7rem; */
   margin-right: auto;
-  padding: 10px;
+  padding: 6px;
+  width: fit-content;
   border-radius: 5px;
-  min-width: 480px;
+  max-width: 360px;
 }
 .num-btn {
-  padding: 1.5rem 2rem;
-  margin: 10px;
-  /* width: 50%; */
+  /* padding: 1.5rem 2rem; */
+  margin: 8px;
+height: 60px;
+  width: 70px;
 }
 .num-btn:hover {
   background-color: #f3f3f3 !important;
