--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 body {
+  padding: 3% ;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -15,7 +16,7 @@ body {
 }
 
 .calc-body {
-  margin: 13vh auto;
+  /* margin: 13vh auto; */
   /* box-shadow: 4px 18px 20px 3px #eee; */
   /* padding: 10px 20px; */
   height: fit-content;
